--- a/portfolio.html
+++ b/portfolio.html
@@ -52,10 +52,10 @@
       </div>
     </header>
     <main>
-      <section class="container section">
-        <h2 hidden>Галерея</h2>
-        <ul class="filters list">
-          <div class="filters-container">
+      <section class="section">
+        <div class="container">
+          <h2 class="visually-hidden">Галерея</h2>
+          <ul class="filters list filters-container">
             <li class="filters-portfolio">
               <button class="filter-buttons" type="button">Все</button>
             </li>
@@ -71,10 +71,8 @@
             <li class="filters-portfolio">
               <button class="filter-buttons" type="button">Маркетинг</button>
             </li>
-          </div>
-        </ul>
-        <ul class="portfolio-examples list">
-          <div class="examples-container">
+          </ul>
+          <ul class="portfolio-examples list examples-container">
             <li class="example-card">
               <a>
                 <img
@@ -204,7 +202,7 @@
             <li class="example-card">
               <a>
                 <img
-                  src="./images/portfolio/portfolio-img-8.jpg"
+                  src="./images/portfolio/portfolio-img-9.jpg"
                   alt="руки над клавиатурой ноутбука"
                   width="370"
                   height="294"
@@ -215,8 +213,8 @@
                 </div>
               </a>
             </li>
-          </div>
-        </ul>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
