--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="section hero">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="modal-button" type="button">Заказать услугу</button>
@@ -59,7 +59,7 @@
       </section>
       <section class="features">
         <div class="container">
-          <h2 hidden>Преимущества</h2>
+          <h2 class="visually-hidden">Преимущества</h2>
           <ul class="features-list list">
             <li class="features-item">
               <h3 class="features-item-title">Внимание к деталям</h3>
